partial implement on randomizer

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	</p>
 	<p><h3>In Progress...</h3>
 		<ul>
+			<li><a href="randomizer.html">Randomizer</a></li>
 			<li>Experiment with static web framework (Reactjs)</li>
 		</ul>
 	</p>
 	<p><h3>Backlog</h3>
 		<ul>
 			<li>tag customization (special/gimmick charts)</li>
-			<li>Randomizer</li>
 			<li>Data structure refinement (?)</li>
 			<li>Whatever I could think of...</li>
 		</ul>
