edit readme markdown

--- a/browse.html
+++ b/browse.html
@@ -148,6 +148,12 @@
             <input type="checkbox" name="chartType" value="coop" id="coopCheckbox">Coop
         </span>
     </p>
+    <p>
+        <span class="label"></span>
+        <span class="inputField">
+            <input type="checkbox" name="showUnlock" value="true" id="showUnlock" checked disabled>Show Unlock Charts
+        </span>
+    </p>
     <p id="levelSelectorArea">
         <span class="label">Level</span>
         <span class="inputField" id="levelText">1 - 28</span>
