update old chart data for phoenix version

--- a/browse.html
+++ b/browse.html
@@ -13,7 +13,7 @@
     <script src="./searchTool.js"></script>
     <script>
         var songList;
-        var jsonFile = $.getJSON( "data/songlist_xx.json", function() {
+        var jsonFile = $.getJSON( "data/songlist_phoenix.json", function() {
             songList = jsonFile.responseJSON.songlist;
         });
         var levelRange = [1,28];
